fix: dev and prod envs

--- a/.env.dev
+++ b/.env.dev
@@ -5,4 +5,5 @@ DB_PORT=5432
 DB_NAME=postgres
 
 
-DISCORD_TOKEN=OTMxMjk1Njc1ODE4MzM2MzI3.Gkxp91.tm-gloVheSPPpN_yD4V2Ll6FpBt4PkMG4afOSo
+# Add discord token here but do not release it, DM me if you need it
+# DISCORD_TOKEN=
